src/test/contracts/negative/error_typer_2.mligo
type toto = int option

let foo : string list = Some (42 + 127)
